# telecom_rag

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  aws_setup.py  bedrock_rag.py  config.py  entity_extractor.py  graph_builder.py  main.py  pyproject.toml
.github/workflows/: ci.yml
