[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telecom-rag"
version = "0.1.0"
authors = [
    { name = "gbvk", email = "masked@example.com" }
]
description = "3GPP RAG Assistant with interactive dependency graph, powered by Amazon Bedrock"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=4.0.0",
    "networkx>=3.0",
    "pyvis>=0.3.0",
    "spacy>=3.7.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
